#684: Code Clean-Up