@@ -17,30 +17,27 @@
 package com.echothree.control.user.term.server.command;
 
 import com.echothree.control.user.term.common.form.GetTermTypeForm;
-import com.echothree.control.user.term.common.result.GetTermTypeResult;
 import com.echothree.control.user.term.common.result.TermResultFactory;
 import com.echothree.model.control.term.server.control.TermControl;
-import com.echothree.model.data.term.server.entity.TermType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetTermTypeCommand
         extends BaseSimpleCommand<GetTermTypeForm> {
-    
+
+    // No COMMAND_SECURITY_DEFINITION, anyone may execute this command.
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("TermTypeName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+        );
     }
     
     /** Creates a new instance of GetTermTypeCommand */
@@ -51,9 +48,9 @@ public class GetTermTypeCommand
     @Override
     protected BaseResult execute() {
         var termControl = Session.getModelController(TermControl.class);
-        GetTermTypeResult result = TermResultFactory.getGetTermTypeResult();
-        String termTypeName = form.getTermTypeName();
-        TermType termType = termControl.getTermTypeByName(termTypeName);
+        var result = TermResultFactory.getGetTermTypeResult();
+        var termTypeName = form.getTermTypeName();
+        var termType = termControl.getTermTypeByName(termTypeName);
         
         if(termType != null) {
             result.setTermType(termControl.getTermTypeTransfer(getUserVisit(), termType));
