@@ -17,26 +17,23 @@
 package com.echothree.control.user.term.server.command;
 
 import com.echothree.control.user.term.common.form.GetTermTypesForm;
-import com.echothree.control.user.term.common.result.GetTermTypesResult;
 import com.echothree.control.user.term.common.result.TermResultFactory;
 import com.echothree.model.control.term.server.control.TermControl;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
+import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.server.control.BaseSimpleCommand;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class GetTermTypesCommand
         extends BaseSimpleCommand<GetTermTypesForm> {
-    
+
+    // No COMMAND_SECURITY_DEFINITION, anyone may execute this command.
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                ));
+        FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetTermTypesCommand */
@@ -46,7 +43,7 @@ public class GetTermTypesCommand
     
     @Override
     protected BaseResult execute() {
-        GetTermTypesResult result = TermResultFactory.getGetTermTypesResult();
+        var result = TermResultFactory.getGetTermTypesResult();
         var partyControl = Session.getModelController(TermControl.class);
         
         result.setTermTypes(partyControl.getTermTypeTransfers(getUserVisit()));
